# spider-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/asset_snapshot/: asset_resolver.py  graph.py  nodes.py  runner.py  state.py  tools.py
app/agents/asset_snapshot/tools/: __init__.py  interfaces.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: asset_snapshot.py  chat.py  health.py
app/core/: config.py  exceptions.py  logging.py
app/domain/schemas/: asset_profile_context.py  asset_resolution.py  asset_snaphot.py  asset_snapshot.py  chat.py  company_peer_context.py  sector_context.py
app/llm/: base.py  json_parser.py  ollama_client.py  prompts.py
app/llm/prompts/: feature_snapshot_prompt.py  feature_snapshot_prompt_builder.py  system_prompts.py
app/market_data/: cache.py  providers.py  yfinance_provider.py
app/services/: asset_snapshot_service.py  chat_service.py
app/tools/asset_snapshot/: company_peers.py  sector_context.py  stable_asset_profile_search.py
docs/: architecture.md  product definition.md
scripts/: README.md  pre-push  pre-push.ps1  setup-hooks.py
tests/: conftest.py  test_asset_resolver_live.py  test_asset_snapshot_api.py  test_asset_snapshot_context_tools.py  test_asset_snapshot_runner.py  test_asset_snapshot_schema.py  test_asset_snapshot_service.py  test_chat.py  test_graph.py  test_health.py  test_market_data.py  test_nodes.py  test_prompt_builder.py
