[project]
name = "ai-market-research-copilot"
version = "0.1.0"
description = "Evidence-aware AI research copilot for structured market and asset analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "yfinance>=1.4.1",
    "langsmith>=0.1.0",
    "rich",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live_llm: tests that call the configured local LLM and require Ollama/model availability",
]
